[package]
name = "ftp-txt-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
ftp = "3.0.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
